<resources>
    <string name="app_name">Now What?</string>
    <string name="back">Back</string>
    <string name="addPayment">Add Payment</string>
    <string name="manageDebt">Manage Debt</string>
    <string name="monthlyPayment">Monthly Payment:</string>
    <string name="amountError">Enter A Loan Amount Greater Than 0</string>
    <string name="rateError">Enter An Interest Rate Greater Than 0</string>
    <string name="termError">Enter A Loan Term Greater Than 0</string>
    <string name="title_activity_login">Login</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="passwordError">Incorrect Password</string>
    <string name="usernameError">Incorrect Username</string>
    <string name="emptyUsername">Username Field is Empty</string>
    <string name="emptyPassword">Password Field is Empty</string>
    <string name="homePrompt">What would you like to do?</string>
    <string name="homeFindJob">Find Job</string>
    <string name="homeJobStatistics">Job Statistics</string>
    <string name="homeManageDebt">Manage Debt</string>
    <string name="aboutBackButton">Back</string>
    <string name="aboutText">Now What? is a mobile application designed to help upcoming or recent college graduates
        who may be agonizing over the question Now What?  This app provides links to investigate careers, track student debt,
        and more."</string>
    <string name="findJobSavedJobs">Saved Jobs</string>
    <string name="findJobSearch">Search</string>
    <string name="findJobJobCategoryPrompt">Job Category: </string>
    <string name="findJobJobPrompt">Job: </string>
    <string name="jobStatisticsJobCategoryPrompt">Job Category: </string>
    <string name="jobStatisticsJobPrompt">Job: </string>
    <string name="jobStatisticsGetStatistics">Get Statistics</string>
    <string name="manageDebtViewPlan">View Payment Plan</string>
    <string name="manageDebtAddLoan">Add Loan</string>
    <string name="manageDebtBack">Back</string>
    <string name="add$">$</string>
    <string name="addPaymentPercent"> %</string>
    <string name="addPaymentLoanAmountHint">Loan Amount</string>
    <string name="addPaymentInterestRateHint">Interest Rate</string>
    <string name="addPaymentPayoffYearsHint">Loan Term (yrs)</string>
    <string name="addPaymentBackButton">Back</string>
    <string name="viewPaymentMonthlyPayment">Monthly Payment:</string>
    <string name="viewPaymentAddPayment">Add Payment</string>
    <string-array name="jobStatisticsJobCategories">
        <item>Management</item>
        <item>Business and Financial Operations</item>
        <item>Computer and Mathematics</item>
        <item>Architecture and Engineering</item>
        <item>Life, Physical, and Social Science</item>
        <item>Community and Social Service</item>
        <item>Legal</item>
        <item>Education, Training, and Library</item>
        <item>Arts, Design, Entertainment, Sport, and Media</item>
        <item>Healthcare Practitioners and Technical</item>
        <item>Healthcare Support</item>
        <item>Protective Service</item>
        <item>Food Preparation and Service Related</item>
        <item>Building and Grounds Cleaning and Maintenance</item>
        <item>Personal Care and Service</item>
        <item>Sales and Related</item>
        <item>Office and Administrative Support</item>
        <item>Farming, Fishing, and Forestry</item>
        <item>Construction and Extraction</item>
        <item>Installation, Maintenance, and Repair</item>
        <item>Production</item>
        <item>Transportation and Material Moving</item>
    </string-array>
    <string-array name="managementJobs">
        <item>All</item>
        <item>Chief Executives</item>
        <item>General and Operations Managers</item>
        <item>Legislators</item>
        <item>Advertising and Promotions Managers</item>
        <item>Marketing Managers</item>
        <item>Sales Managers</item>
        <item>Public Relations and Fundraising Managers</item>
        <item>Administrative Services Managers</item>
        <item>Computer and Information Systems Managers</item>
        <item>Financial Managers</item>
        <item>Industrial Production Managers</item>
        <item>Purchasing Managers</item>
        <item>Transportation, Storage, and Distribution Managers</item>
        <item>Compensation and Benefits Managers</item>
        <item>Human Resources Managers</item>
        <item>Training and Development Managers</item>
        <item>Farmers, Ranchers, and Other Agricultural Managers</item>
        <item>Construction Managers</item>
        <item>Education Adminstrators, Preschool and Childcare Center/Program</item>
        <item>Education Administrators, Elementary and Secondary School</item>
        <item>Education Administrators, Postsecondary</item>
        <item>Education Adminstrators, All Other</item>
        <item>Architectural and Engineering Managers</item>
        <item>Food Service Managers</item>
        <item>Funeral Service Managers</item>
        <item>Gaming Managers</item>
        <item>Lodging Managers</item>
        <item>Medical and Health Services Managers</item>
        <item>Natural Sciences Managers</item>
        <item>Postmasters and Mail Superintendents</item>
        <item>Property, Real Estate, and Community Association Managers</item>
        <item>Social and Community Service Managers</item>
        <item>Emergency Management Directors</item>
        <item>Managers, All Other</item>
    </string-array>
    <string-array name="b_fJobs">
        <item>All</item>
        <item>Agents and Business Managers of Artists, Performers, and Athletes</item>
        <item>Buyers and Purchasing Agents, Farm Products</item>
        <item>Wholesale and Retail Buyers, Except Farm Products</item>
        <item>Purchasing Agents, Except Wholesale, Retail, and Farm Products</item>
        <item>Claims Adjusters, Examiners, and Investigators</item>
        <item>Insurance Appraisers, Auto Damage</item>
        <item>Compliance Officers</item>
        <item>Cost Estimators</item>
        <item>Human Resources Specialists</item>
        <item>Farm Labor Contractors</item>
        <item>Labor Relations Specialists</item>
        <item>Logisticians</item>
        <item>Management Analysis</item>
        <item>Meeting, Convention, and Event Planners</item>
        <item>Fundraisers</item>
        <item>Compensation, Benefits, and Job Analysis Specialists</item>
        <item>Training and Development Specialists</item>
        <item>Market Research Analysts and Marketing Specialists</item>
        <item>Business Operations Specialists, All Other</item>
        <item>Accountants and Auditors</item>
        <item>Appraisers and Assessors of Real Estate</item>
        <item>Budget Analysts</item>
        <item>Credit Analysts</item>
        <item>Financial Analysts</item>
        <item>Personal Financial Advisors</item>
        <item>Insurance Underwriters</item>
        <item>Financial Examiners</item>
        <item>Credit Counselors</item>
        <item>Loan Officers</item>
        <item>Tax Examiners and Collectors, and Revenue Agents</item>
        <item>Tax Preparers</item>
        <item>Financial Specialists, All Other</item>
    </string-array>
    <string-array name="comp_mathJobs">
        <item>All</item>
        <item>Computer and Information Research Scientists</item>
        <item>Computer Systems Analysts</item>
        <item>Information Security Analysts</item>
        <item>Computer Programmers</item>
        <item>Software Developers, Applications</item>
        <item>Software Developers, Systems Software</item>
        <item>Web Developers</item>
        <item>Database Administrators</item>
        <item>Network and Computer Systems Administrators</item>
        <item>Computer Network Architects</item>
        <item>Computer User Support Specialists</item>
        <item>Computer Network Support Specialists</item>
        <item>Computer Occupations, All Other</item>
        <item>Actuaries</item>
        <item>Mathematicians</item>
        <item>Operations Research Analysts</item>
        <item>Statisticians</item>
        <item>Mathematical Technicians</item>
        <item>Mathematical Science Occupations, All Other</item>
    </string-array>
    <string-array name="architect_engJobs">
        <item>All</item>
        <item>Architects, Except Landscape and Naval</item>
        <item>Landscape Architects</item>
        <item>Cartographers and Photogrammetrists</item>
        <item>Surveyors</item>
        <item>Aerospace Engineers</item>
        <item>Agricultural Engineers</item>
        <item>Biomedical Engineers</item>
        <item>Chemical Engineers</item>
        <item>Civil Engineers</item>
        <item>Computer Hardware Engineers</item>
        <item>Electical Engineers</item>
        <item>Electronics Engineers, Except Computer</item>
        <item>Environmental Engineers</item>
        <item>Health and Safety Engineers, Except Mining Safety Engineers and Inspectors</item>
        <item>Industrial Engineers</item>
        <item>Marine Engineers and Naval Architects</item>
        <item>Materials Engineers</item>
        <item>Mechanical Engineers</item>
        <item>Mining and Geological Engineers, Including Mining Safety Engineers</item>
        <item>Nuclear Engineers</item>
        <item>Petroleum Engineers</item>
        <item>Engineers, All Other</item>
        <item>Architectural and Civil Drafters</item>
        <item>Electrical and Electronics Drafters</item>
        <item>Mechanical Drafters</item>
        <item>Drafters, All Other</item>
        <item>Aerospace Engineering and Operations Technicians</item>
        <item>Civil Engineering Technicians</item>
        <item>Electrical and Electronics Engineering Technicians</item>
        <item>Electro-Mechanical Technicians</item>
        <item>Environmental Engineering Technicians</item>
        <item>Industrial Engineering Technicians</item>
        <item>Mechanical Engineering Technicians</item>
        <item>Engineering Technicians, Except Drafters, All Other</item>
        <item>Surveying and Mapping Technicians</item>
    </string-array>
</resources>