<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bam00.csfinalapp.AddPaymentActivity">

    <TextView
        android:text="@string/add$"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addPayment$TextView"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/addPaymentLoanAmountEditText"
        android:layout_alignBottom="@+id/addPaymentLoanAmountEditText"
        android:layout_toLeftOf="@+id/addPaymentLoanAmountEditText"
        android:layout_toStartOf="@+id/addPaymentLoanAmountEditText"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp" />

    <TextView
        android:text="@string/addPaymentPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addPaymentPercentTextView"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/addPaymentInterestRateEditText"
        android:layout_alignBottom="@+id/addPaymentInterestRateEditText"
        android:layout_toRightOf="@+id/addPaymentInterestRateEditText"
        android:layout_toEndOf="@+id/addPaymentInterestRateEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/addPaymentPayoffYearsEditText"
        android:textSize="20sp"
        android:hint="@string/addPaymentPayoffYearsHint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:id="@+id/addPaymentLoanAmountEditText"
        android:hint="@string/addPaymentLoanAmountHint"
        android:layout_above="@+id/addPaymentInterestRateEditText"
        android:layout_alignLeft="@+id/addPaymentInterestRateEditText"
        android:layout_alignStart="@+id/addPaymentInterestRateEditText"
        android:layout_marginBottom="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:id="@+id/addPaymentInterestRateEditText"
        android:hint="@string/addPaymentInterestRateHint"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/addPaymentPayoffYearsEditText"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/manageDebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addPaymentBackButton"
        android:onClick="manage"
        android:layout_marginLeft="20dp"
        android:layout_alignBottom="@+id/addPaymentAddButton"
        android:layout_toRightOf="@+id/addPaymentAddButton"
        android:layout_toEndOf="@+id/addPaymentAddButton" />

    <Button
        android:text="@string/addPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addPaymentAddButton"
        android:onClick="addingPayment"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/addPaymentPayoffYearsEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
