<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bam00.csfinalapp.ManageDebtActivity">

    <Button
        android:text="@string/manageDebtViewPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/manageDebtViewPlanButton"
        android:onClick="savedPaymentPlan"
        android:layout_below="@+id/manageDebtAddLoanButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/manageDebtAddLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manageDebtAddLoanButton"
        android:layout_marginTop="125dp"
        android:onClick="addLoan"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/manageDebtBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/manageDebtBackButton"
        android:layout_below="@+id/manageDebtViewPlanButton"
        android:layout_alignRight="@+id/manageDebtAddLoanButton"
        android:layout_alignEnd="@+id/manageDebtAddLoanButton"
        android:onClick="home"/>
</RelativeLayout>
