<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bam00.csfinalapp.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/loginUsernameEditText"
        android:hint="@string/loginUsernameHint"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/loginButton"
        android:layout_alignEnd="@+id/loginButton"
        android:layout_marginTop="100dp" />

    <Button
        android:text="@string/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:onClick="login"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/loginPasswordEditText"
        android:hint="@string/loginPasswordHint"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/loginUsernameEditText"
        android:layout_alignLeft="@+id/loginUsernameEditText"
        android:layout_alignStart="@+id/loginUsernameEditText" />
</RelativeLayout>
