<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bam00.csfinalapp.ViewPaymentPlanActivity">

    <Button
        android:text="@string/viewPaymentAddPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewPaymentAddPaymentButton"
        android:onClick="addPayment"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <Button
        android:text="@string/manageDebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/viewPaymentAddPaymentButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/viewPaymentPlanManageDebtButton"
        android:onClick="manage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewPaymentMonthlyPaymentAmountTextView"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/viewPaymentMonthlyPaymentTextView"
        android:layout_alignBottom="@+id/viewPaymentMonthlyPaymentTextView"
        android:layout_toRightOf="@+id/viewPaymentMonthlyPaymentTextView"
        android:layout_toEndOf="@+id/viewPaymentMonthlyPaymentTextView"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp" />

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/expandableListView"
        android:divider="@color/black"
        android:dividerHeight="1dp"
        android:listSelector="@color/sky_blue"
        android:childDivider="@color/black"
        android:layout_above="@+id/viewPaymentMonthlyPaymentTextView"
        android:paddingBottom="10dp"/>

    <TextView
        android:text="@string/monthlyPayment"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewPaymentMonthlyPaymentTextView"
        android:paddingBottom="10dp"
        android:layout_above="@+id/viewPaymentAddPaymentButton"
        android:layout_alignLeft="@+id/viewPaymentAddPaymentButton"
        android:layout_alignStart="@+id/viewPaymentAddPaymentButton" />
</RelativeLayout>
